:tada: 프로필 내용 업데이트

--- a/my-work/index.html
+++ b/my-work/index.html
@@ -2,9 +2,20 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+
+    <title>yeaji.kim</title>
+    <meta name="keywords" content="포트폴리오" />
+    <meta name="description" content="8년차 UI 개발자, 김예지 포트폴리오" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="yeaji Kim, Portfolio" />
+    <meta property="og:description" content="8년차 UI 개발자, 김예지 포트폴리오" />
+    <meta property="og:url" content="#" />
+
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
